[package]
name = "discord-backend"
version = "0.1.0"
edition = "2021"
authors = ["Chloe Pratas <chloevision97@gmail.com>"]


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "discord-backend"



[dependencies]
actix-web = "4"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-identity = "0.4"

tokio = { version = "1", features = ["full"] }
config = { version = "0.13.3", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"

uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["serde", "clock"] }
tracing = { version ="0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = [    "fmt",
    "std",
    "env-filter",
    "registry",
    'json',
    'tracing-log',] }
tracing-bunyan-formatter = "0.3"
deadpool-redis = "0.13.0"
pasetors = "0.6.7"
once_cell = "1.18.0"
hex = "0.4.3"
argon2 = "0.5"
serde_json = { version = "1.0.107", features = ["raw_value"] }
minijinja = { version = "0.32", features = ["source"] }
lettre = { version = "0.11.0", features = ["builder", "tokio1-native-tls"] }


[dependencies.sqlx]
version ="0.6"
default-features = false
features = ["postgres", "runtime-tokio-rustls", "macros", "chrono","uuid", "migrate"]
