[package]
name = "budget_app"
version = "0.1.0"
edition = "2021"
authors = ["Chloe Pratas <chloevision97@gmail.com>"]


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "budget_app"



[dependencies]
actix-web = { version = "4.4.1", features = ["openssl"] }
tracing-actix-web = "0.7"
openssl = { version = "0.10.60", features = ["v110"] }
actix-session = { version = "0.7", features = [ "redis-rs-session","redis-rs-tls-session","cookie-session",] }
actix-identity = "0.4"
axiom-rs = "0.8"
tokio = { version = "1", features = ["full"] }
config = { version = "0.13.3", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
actix-web-validator = "5.0.1"
validator = { version = "0.16", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["serde", "clock"] }
tracing = { version ="0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3", features = [    "fmt",
    "std",
    "env-filter",
    "registry",
    'json',
    'tracing-log',] }
tracing-bunyan-formatter = "0.3"
deadpool-redis = "0.13.0"
pasetors = "0.6.7"
once_cell = "1.19.0"
hex = "0.4.3"
argon2 = "0.5"
serde_json = { version = "1.0.107", features = ["raw_value"] }
minijinja = { version = "0.32", features = ["source"] }
lettre = { version = "0.11.0", features = ["builder", "tokio1-native-tls"] }
actix-cors = "0.6.4"
aws-config = "0.57.1"
aws-sdk-s3 = "0.35.0"
actix-multipart = "0.6.1"
reqwest = { version = "0.11.22", features = ["json", "cookies", "rustls-tls","multipart"] }


[dependencies.sqlx]
version ="0.7.3"
default-features = false
features = ["postgres", "runtime-tokio-rustls", "macros", "chrono","uuid", "migrate"]

[dev-dependencies]
fake = "2.9.1"
